Still working on Server, ran into bug